# rp2350-esp-hosted

./: .gitignore  CMakeLists.txt  FreeRTOS_Kernel.cmake  README.md  esp_hosted.cmake  lwip.cmake  main.c
Core/Include/: FreeRTOSConfig.h
Driver/ethernetif/Inc/: ethernetif.h  lwipopts.h
Driver/ethernetif/Inc/arch/: sys_arch.h
Driver/ethernetif/Src/: ethernetif.c  sys_arch.c
Middlewares/esp-hosted/: esp_config.h  esp_netif.h
Middlewares/esp-hosted/common/: esp_wrapper.c
Middlewares/esp-hosted/common/include/: adapter.h  esp_wifi_types_generic.h  esp_wrapper.h
Middlewares/esp-hosted/drivers/mempool/: mempool.c  mempool.h
Middlewares/esp-hosted/drivers/rpc/core/: rpc_core.c  rpc_core.h  rpc_evt.c  rpc_req.c  rpc_rsp.c
Middlewares/esp-hosted/drivers/rpc/slaveif/: rpc_slave_if.c  rpc_slave_if.h
Middlewares/esp-hosted/drivers/rpc/wrap/: rpc_wrap.c  rpc_wrap.h
Middlewares/esp-hosted/drivers/serial/: serial_drv.c  serial_ll_if.c  serial_ll_if.h
Middlewares/esp-hosted/drivers/transport/: transport.c  transport.h
Middlewares/esp-hosted/drivers/virtual_serial_if/: serial_if.c  serial_if.h
Middlewares/esp-hosted/host/: esp_hosted_host_init.c
Middlewares/esp-hosted/host/api/include/: esp_hosted_api.h  esp_wifi.h
Middlewares/esp-hosted/host/api/src/: esp_hosted_api.c  esp_wifi_weak.c
Middlewares/esp-hosted/host/utils/: common.c  common.h
